Revert "Fix sidebar button overlapping issue"
This reverts commit 455e65f6ef124e7f22615df9186dc8a34e6d097b.
The fix just triggered some strange behaviour of the android browser (4.3, Samsung) which seemed to have fixed the problem, but didn't.

--- a/resources/scss/components/sidebar.scss
+++ b/resources/scss/components/sidebar.scss
@@ -22,8 +22,6 @@
   min-height: $buttonHeight;
   text-align: left;
   padding-left: $default-padding;
-  line-height: $buttonHeight;
-  padding-right: $default-padding;
 }
 
 .sidebar-current_class {
